# progate-hackathon

./: .dockerignore  .env.example  .gitignore  .npmrc  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_add_kawarun_tables.py  0003_add_bgm_url_to_albums.py  0003_add_photo_filter_columns.py  0004_add_photo_filter_columns.py  0004_change_reveal_date_to_datetime.py  0005_add_photo_filter_columns.py  0006_add_google_sub.py  0007_add_movies_table.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  db.py  jwt.py  security.py  storage.py
apps/api/app/filters/: engine.py  presets.py
apps/api/app/models/: __init__.py  album.py  album_member.py  invite_code.py  movie.py  photo.py  todo.py  user.py
apps/api/app/movie/: builder.py
apps/api/app/repositories/: album.py  invite.py  movie.py  photo.py  todo.py  user.py
apps/api/app/routers/: albums.py  auth.py  filters.py  movies.py  photos.py  todos.py
apps/api/app/schemas/: album.py  movie.py  photo.py  todo.py  user.py
apps/api/app/services/: ai_photo.py  album.py  auth.py  movie.py  photo.py  todo.py
apps/api/scripts/: preview_filter.py
apps/api/tests/: conftest.py  test_album_delete.py  test_album_sharing.py  test_auth.py  test_filter_blend.py  test_filters.py  test_movie_builder.py  test_todos.py
apps/mobile/: .env.example  .gitignore  App.tsx  app.json  eslint.config.js  metro.config.js  package.json
apps/mobile/ios/: Podfile
apps/mobile/ios/Todo/: Info.plist
apps/mobile/ios/Todo.xcodeproj/: project.pbxproj
apps/mobile/src/components/: AiTransformModal.tsx  MovieExportButton.tsx  (+1 more)
apps/web/: Dockerfile  Dockerfile.dev  package.json
docs/: architecture.md
(+23 files in other folders)
